--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "private": "true",
   "scripts": {
     "dev": "tsx watch ./src/index.ts",
-    "start": "tsx ./src/index.ts"
+    "start": "tsx ./src/index.ts",
+    "build": "tsc"
   },
-  "author": "jinmayamashita",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.38.1",
     "@typescript-eslint/parser": "5.38.1",
@@ -11,6 +12,8 @@
     "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "tsx": "3.9.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "@tsconfig/node16": "1.0.3",
+    "@types/node": "18.8.3"
   }
 }
