--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:base",
+    ":timezone(Asia/Tokyo)"
   ],
-  "automerge": true,
-  "automergeType": "pr-comment",
-  "automergeComment": "bors: r+"
+  "semanticCommits": "enabled",
+  "packageRules": [
+    {
+      "automerge": true
+    }
+  ]
 }
